removed some Findbugs warnings