@@ -1,11 +1,11 @@
 package org.distributeme.test.interception.interceptor;
 
-import java.util.List;
-
 import org.distributeme.core.ClientSideCallContext;
 import org.distributeme.core.interceptor.AbstractClientSideRequestInterceptor;
 import org.distributeme.core.interceptor.InterceptionContext;
 import org.distributeme.core.interceptor.InterceptorResponse;
+
+import java.util.List;
 
 
 public class InterceptSumInterceptor extends AbstractClientSideRequestInterceptor{
@@ -25,8 +25,8 @@ public class InterceptSumInterceptor extends AbstractClientSideRequestIntercepto
 		List parameters = context.getParameters();
 		Integer a = (Integer) parameters.get(0);
 		Integer b = (Integer) parameters.get(1);
-		parameters.set(0, new Integer(a*2));
-		parameters.set(1, new Integer(b*2));
+		parameters.set(0, Integer.valueOf(a * 2));
+		parameters.set(1, Integer.valueOf(b * 2));
 		//this call is not needed, but it makes the code readable.
 		context.setParameters(parameters);
 		
